# Resourceium

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  CONTRIBUTING.md  README.md  Vagrantfile  contributors.md  docker-compose.yml  justfile  vetur.config.js
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setup-deps  setup-storage
client/: .gitignore  Dockerfile  Procfile  nuxt.config.js  package.json  tailwind.config.js  windi.config.ts
client/components/: Alert.vue  Alerts.vue  AlertsContainer.vue  InputBox.vue  NavBar.vue  SideBar.vue
client/components/base/: AnimatedNumber.vue  InputBox.vue  LoadingButton.vue  SelectBox.vue  ShowLoading.vue
client/components/common/: EmptyData.vue
client/components/icons/: Time.vue
client/components/sidebar/: Container.vue  Element.vue  Footer.vue  Header.vue
client/cypress/integration/: pages.spec.js
client/layouts/: default.vue  error.vue
client/pages/: dashboard.vue  faq.vue  index.vue
client/plugins/: alerts.js  fontawesome.js  uploads.js
client/store/: alerts.js  blur.js  sidebar.js
client/utils/: extensions.json  sleep.js
server/: .gitignore  Dockerfile  Procfile  pom.xml
storage/: .gitignore  Procfile  manage.py  pyproject.toml  requirements.txt
storage/files/: models.py  urls.py  views.py
storage/files/migrations/: 0001_initial.py  0002_auto_20210502_2321.py  0003_auto_20210503_0844.py
storage/storage/: asgi.py  settings.py  urls.py  wsgi.py
tools/: create-data.sh  init-db.sh  reset-db.sh  run-dev
tools/Vagrant/: bootstrap  setup-deps
tools/shell/: env-vars
(+138 files in other folders)
